--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "axios": "^1.9.0",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.10.4",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
