--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto-js": "^4.2.0",
     "framer-motion": "^12.10.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.510.0",
     "mysql2": "^3.14.1",
     "next": "15.3.2",
     "react": "^19.0.0",
